--- a/Draw/Controller/Home/HomeController.xib
+++ b/Draw/Controller/Home/HomeController.xib
@@ -38,10 +38,10 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="775230124">
+					<object class="IBUIImageView" id="122079969">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 417}, {320, 43}}</string>
+						<string key="NSFrame">{{0, 410}, {320, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="84978974"/>
@@ -56,18 +56,23 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="370114500">
+							<object class="IBUIImageView" id="590911239">
 								<reference key="NSNextResponder" ref="104542062"/>
-								<int key="NSvFlags">292</int>
+								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{320, 224}</string>
 								<reference key="NSSuperview" ref="104542062"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="932893619"/>
+								<object class="NSColor" key="IBUIBackgroundColor" id="1067307192">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
+								</object>
+								<int key="IBUIContentMode">2</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">main_menubg@2x.png</string>
+									<string key="NSResourceName">main_menubg.png</string>
 								</object>
 							</object>
 							<object class="IBUILabel" id="865402943">
@@ -180,7 +185,7 @@
 									<int key="type">1</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="111610914">
+								<object class="NSFont" key="IBUIFont" id="637615426">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
@@ -448,12 +453,12 @@
 								<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="693387354">
+								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="42647896">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">number@2x.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="830635091"/>
-								<reference key="IBUIFont" ref="111610914"/>
+								<reference key="IBUIFont" ref="637615426"/>
 							</object>
 							<object class="IBUIButton" id="1009675856">
 								<reference key="NSNextResponder" ref="104542062"/>
@@ -474,9 +479,9 @@
 								<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-								<reference key="IBUINormalBackgroundImage" ref="693387354"/>
+								<reference key="IBUINormalBackgroundImage" ref="42647896"/>
 								<reference key="IBUIFontDescription" ref="830635091"/>
-								<reference key="IBUIFont" ref="111610914"/>
+								<reference key="IBUIFont" ref="637615426"/>
 							</object>
 							<object class="IBUILabel" id="383890732">
 								<reference key="NSNextResponder" ref="104542062"/>
@@ -509,14 +514,18 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 193}, {320, 224}}</string>
+						<string key="NSFrame">{{0, 186}, {320, 224}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="370114500"/>
+						<reference key="NSNextKeyView" ref="590911239"/>
+						<reference key="IBUIBackgroundColor" ref="1067307192"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIDirectionalLockEnabled">YES</bool>
+						<bool key="IBUIScrollEnabled">NO</bool>
 						<bool key="IBUIPagingEnabled">YES</bool>
+						<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
 						<bool key="IBUIShowsVerticalScrollIndicator">NO</bool>
 					</object>
 					<object class="IBUILabel" id="142088403">
@@ -733,7 +742,7 @@
 							<string key="NSResourceName">small_sign@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="830635091"/>
-						<reference key="IBUIFont" ref="111610914"/>
+						<reference key="IBUIFont" ref="637615426"/>
 					</object>
 					<object class="IBUIButton" id="84978974">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -889,7 +898,7 @@
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-						<reference key="IBUINormalBackgroundImage" ref="693387354"/>
+						<reference key="IBUINormalBackgroundImage" ref="42647896"/>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1035273632">
 							<int key="type">1</int>
 							<double key="pointSize">12</double>
@@ -919,7 +928,7 @@
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-						<reference key="IBUINormalBackgroundImage" ref="693387354"/>
+						<reference key="IBUINormalBackgroundImage" ref="42647896"/>
 						<reference key="IBUIFontDescription" ref="1035273632"/>
 						<reference key="IBUIFont" ref="912293599"/>
 					</object>
@@ -1028,7 +1037,7 @@
 						<string key="NSFrame">{{239, 360}, {72, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="775230124"/>
+						<reference key="NSNextKeyView" ref="122079969"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -1494,7 +1503,7 @@
 							<reference ref="142088403"/>
 							<reference ref="100250627"/>
 							<reference ref="472996412"/>
-							<reference ref="775230124"/>
+							<reference ref="122079969"/>
 							<reference ref="322962711"/>
 							<reference ref="840929552"/>
 							<reference ref="418830712"/>
@@ -1603,7 +1612,7 @@
 							<reference ref="523177352"/>
 							<reference ref="121819782"/>
 							<reference ref="1009675856"/>
-							<reference ref="370114500"/>
+							<reference ref="590911239"/>
 							<reference ref="383890732"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
@@ -1695,12 +1704,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">108</int>
-						<reference key="object" ref="775230124"/>
+						<reference key="object" ref="122079969"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">109</int>
-						<reference key="object" ref="370114500"/>
+						<reference key="object" ref="590911239"/>
 						<reference key="parent" ref="104542062"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -2035,7 +2044,7 @@
 			<string key="h_draw@2x.png">{134, 134}</string>
 			<string key="h_friends@2x.png">{134, 134}</string>
 			<string key="h_guess@2x.png">{134, 134}</string>
-			<string key="main_menubg@2x.png">{640, 447}</string>
+			<string key="main_menubg.png">{16, 16}</string>
 			<string key="number@2x.png">{50, 45}</string>
 			<string key="shop@2x.png">{122, 122}</string>
 			<string key="small_chat@2x.png">{59, 59}</string>
