--- a/Draw/Controller/Home/HomeController.xib
+++ b/Draw/Controller/Home/HomeController.xib
@@ -38,7 +38,7 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="122079969">
+					<object class="IBUIImageView" id="647166087">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 410}, {320, 50}}</string>
@@ -56,14 +56,14 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIImageView" id="590911239">
+							<object class="IBUIImageView" id="42006875">
 								<reference key="NSNextResponder" ref="104542062"/>
 								<int key="NSvFlags">301</int>
 								<string key="NSFrameSize">{320, 224}</string>
 								<reference key="NSSuperview" ref="104542062"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="932893619"/>
-								<object class="NSColor" key="IBUIBackgroundColor" id="1067307192">
+								<object class="NSColor" key="IBUIBackgroundColor" id="114594916">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
@@ -185,7 +185,7 @@
 									<int key="type">1</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="637615426">
+								<object class="NSFont" key="IBUIFont" id="69232038">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
@@ -453,12 +453,12 @@
 								<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="42647896">
+								<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="926728981">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">number@2x.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="830635091"/>
-								<reference key="IBUIFont" ref="637615426"/>
+								<reference key="IBUIFont" ref="69232038"/>
 							</object>
 							<object class="IBUIButton" id="1009675856">
 								<reference key="NSNextResponder" ref="104542062"/>
@@ -479,9 +479,9 @@
 								<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleColor" ref="700530203"/>
 								<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-								<reference key="IBUINormalBackgroundImage" ref="42647896"/>
+								<reference key="IBUINormalBackgroundImage" ref="926728981"/>
 								<reference key="IBUIFontDescription" ref="830635091"/>
-								<reference key="IBUIFont" ref="637615426"/>
+								<reference key="IBUIFont" ref="69232038"/>
 							</object>
 							<object class="IBUILabel" id="383890732">
 								<reference key="NSNextResponder" ref="104542062"/>
@@ -517,8 +517,8 @@
 						<string key="NSFrame">{{0, 186}, {320, 224}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="590911239"/>
-						<reference key="IBUIBackgroundColor" ref="1067307192"/>
+						<reference key="NSNextKeyView" ref="42006875"/>
+						<reference key="IBUIBackgroundColor" ref="114594916"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -742,7 +742,7 @@
 							<string key="NSResourceName">small_sign@2x.png</string>
 						</object>
 						<reference key="IBUIFontDescription" ref="830635091"/>
-						<reference key="IBUIFont" ref="637615426"/>
+						<reference key="IBUIFont" ref="69232038"/>
 					</object>
 					<object class="IBUIButton" id="84978974">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -898,7 +898,7 @@
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-						<reference key="IBUINormalBackgroundImage" ref="42647896"/>
+						<reference key="IBUINormalBackgroundImage" ref="926728981"/>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1035273632">
 							<int key="type">1</int>
 							<double key="pointSize">12</double>
@@ -928,7 +928,7 @@
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleShadowColor" ref="493617894"/>
-						<reference key="IBUINormalBackgroundImage" ref="42647896"/>
+						<reference key="IBUINormalBackgroundImage" ref="926728981"/>
 						<reference key="IBUIFontDescription" ref="1035273632"/>
 						<reference key="IBUIFont" ref="912293599"/>
 					</object>
@@ -1037,7 +1037,7 @@
 						<string key="NSFrame">{{239, 360}, {72, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="122079969"/>
+						<reference key="NSNextKeyView" ref="647166087"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -1066,9 +1066,8 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="104542062"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="730621736"/>
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MC45NjQ3MDU4ODI0IDAuOTc2NDcwNTg4MiAwLjkzMzMzMzMzMzMAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
@@ -1503,7 +1502,7 @@
 							<reference ref="142088403"/>
 							<reference ref="100250627"/>
 							<reference ref="472996412"/>
-							<reference ref="122079969"/>
+							<reference ref="647166087"/>
 							<reference ref="322962711"/>
 							<reference ref="840929552"/>
 							<reference ref="418830712"/>
@@ -1612,7 +1611,7 @@
 							<reference ref="523177352"/>
 							<reference ref="121819782"/>
 							<reference ref="1009675856"/>
-							<reference ref="590911239"/>
+							<reference ref="42006875"/>
 							<reference ref="383890732"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
@@ -1704,12 +1703,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">108</int>
-						<reference key="object" ref="122079969"/>
+						<reference key="object" ref="647166087"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">109</int>
-						<reference key="object" ref="590911239"/>
+						<reference key="object" ref="42006875"/>
 						<reference key="parent" ref="104542062"/>
 					</object>
 					<object class="IBObjectRecord">
