--- a/Draw/Controller/Common/CommonDiceDialog.xib
+++ b/Draw/Controller/Common/CommonDiceDialog.xib
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="123595793"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="613159573"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -59,6 +60,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{304, 206}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="140913823"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -72,6 +74,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{0, 9}, {304, 30}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="417008969"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -107,6 +110,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{20, 154}, {99, 37}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="523235243"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -115,14 +119,8 @@
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<string key="IBUINormalTitle">取消</string>
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
-								<reference key="IBUINormalTitleColor" ref="74671699"/>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="729125199">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MAA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace">
-										<int key="NSID">2</int>
-									</object>
-								</object>
+								<reference key="IBUINormalTitleColor" ref="256703508"/>
+								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="859759616">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
@@ -138,6 +136,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{185, 154}, {99, 37}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -145,8 +144,8 @@
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<string key="IBUINormalTitle">确定</string>
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
-								<reference key="IBUINormalTitleColor" ref="74671699"/>
-								<reference key="IBUINormalTitleShadowColor" ref="729125199"/>
+								<reference key="IBUINormalTitleColor" ref="256703508"/>
+								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
 								<reference key="IBUIFontDescription" ref="859759616"/>
 								<reference key="IBUIFont" ref="606510448"/>
 							</object>
@@ -155,6 +154,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{53, 60}, {198, 76}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="892863268"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -181,6 +181,7 @@
 						</array>
 						<string key="NSFrame">{{8, 101.5}, {304, 257}}</string>
 						<reference key="NSSuperview" ref="123595793"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="892798174"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="553214630">
 							<int key="NSColorSpace">3</int>
@@ -191,6 +192,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="705963710"/>
 				<reference key="IBUIBackgroundColor" ref="553214630"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -361,7 +363,90 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonDialog</string>
+					<string key="superclassName">CommonInfoView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">FontButton</string>
+						<string key="contentBackground">UIImageView</string>
+						<string key="messageLabel">UILabel</string>
+						<string key="oKButton">FontButton</string>
+						<string key="titleLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentBackground">
+							<string key="name">contentBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="messageLabel">
+							<string key="name">messageLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="oKButton">
+							<string key="name">oKButton</string>
+							<string key="candidateClassName">FontButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonDialog.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonInfoView</string>
+					<string key="superclassName">UIView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentView</string>
+						<string key="NS.object.0">UIView</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentView</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonInfoView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontButton.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HKGirlFontLabel</string>
+					<string key="superclassName">FontLabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
