--- a/Draw/Controller/Common/DiceRoomPasswordDialog.xib
+++ b/Draw/Controller/Common/DiceRoomPasswordDialog.xib
@@ -60,7 +60,6 @@
 								<int key="NSvFlags">283</int>
 								<string key="NSFrame">{{185, 148}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -70,11 +69,11 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUINormalTitleColor" ref="301673449"/>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="889512516">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MAA</bytes>
+								<object class="NSColor" key="IBUINormalTitleColor" id="677511173">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="655663959">
 									<int key="type">2</int>
 									<double key="pointSize">16</double>
@@ -97,8 +96,8 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<reference key="IBUIHighlightedTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleShadowColor" ref="889512516"/>
+								<reference key="IBUINormalTitleColor" ref="677511173"/>
+								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
 								<reference key="IBUIFontDescription" ref="655663959"/>
 								<reference key="IBUIFont" ref="328412362"/>
 							</object>
@@ -180,7 +179,10 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<reference key="IBUIHighlightedTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleColor" ref="889512516"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MAA</bytes>
+								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
@@ -404,9 +406,9 @@
 							<reference ref="244077518"/>
 							<reference ref="973088010"/>
 							<reference ref="914890163"/>
-							<reference ref="755309997"/>
 							<reference ref="477338562"/>
 							<reference ref="445091174"/>
+							<reference ref="755309997"/>
 						</array>
 						<reference key="parent" ref="908420203"/>
 					</object>
