--- a/Draw/Controller/Common/DiceRoomPasswordDialog~ipad.xib
+++ b/Draw/Controller/Common/DiceRoomPasswordDialog~ipad.xib
@@ -69,16 +69,16 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUINormalTitleColor" ref="301673449"/>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="889512516">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MAA</bytes>
+								<object class="NSColor" key="IBUINormalTitleColor" id="872183959">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="833109570">
+								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="95267556">
 									<int key="type">2</int>
 									<double key="pointSize">32</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="564271229">
+								<object class="NSFont" key="IBUIFont" id="464571274">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">32</double>
 									<int key="NSfFlags">16</int>
@@ -96,10 +96,10 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<reference key="IBUIHighlightedTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleShadowColor" ref="889512516"/>
-								<reference key="IBUIFontDescription" ref="833109570"/>
-								<reference key="IBUIFont" ref="564271229"/>
+								<reference key="IBUINormalTitleColor" ref="872183959"/>
+								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
+								<reference key="IBUIFontDescription" ref="95267556"/>
+								<reference key="IBUIFont" ref="464571274"/>
 							</object>
 							<object class="IBUITextField" id="973088010">
 								<reference key="NSNextResponder" ref="961595998"/>
@@ -132,11 +132,11 @@
 									<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="300380825">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="570415909">
 									<int key="type">1</int>
 									<double key="pointSize">28</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="403199587">
+								<object class="NSFont" key="IBUIFont" id="40438891">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">28</double>
 									<int key="NSfFlags">16</int>
@@ -164,8 +164,8 @@
 									<bool key="IBUIEnablesReturnKeyAutomatically">YES</bool>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="300380825"/>
-								<reference key="IBUIFont" ref="403199587"/>
+								<reference key="IBUIFontDescription" ref="570415909"/>
+								<reference key="IBUIFont" ref="40438891"/>
 							</object>
 							<object class="IBUIButton" id="146925368">
 								<reference key="NSNextResponder" ref="961595998"/>
@@ -179,7 +179,10 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<reference key="IBUIHighlightedTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleColor" ref="889512516"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MAA</bytes>
+								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
@@ -214,11 +217,11 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="1067374344">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="502090815">
 									<int key="type">1</int>
 									<double key="pointSize">32</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="208739440">
+								<object class="NSFont" key="IBUIFont" id="158384846">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">32</double>
 									<int key="NSfFlags">16</int>
@@ -245,8 +248,8 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
-								<reference key="IBUIFontDescription" ref="1067374344"/>
-								<reference key="IBUIFont" ref="208739440"/>
+								<reference key="IBUIFontDescription" ref="502090815"/>
+								<reference key="IBUIFont" ref="158384846"/>
 							</object>
 						</array>
 						<string key="NSFrame">{{36, 98}, {696, 513}}</string>
